--- a/package.json
+++ b/package.json
@@ -9,5 +9,9 @@
   },
   "devDependencies": {
     "nuxt": "^3.2.2"
+  },
+  "dependencies": {
+    "use-routes": "^0.2.2",
+    "vue-router": "^4.1.6"
   }
 }
